Fase 6, Fase 7, Fase  8, tests y pruebas en Postman
